changed config for right entity size

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,4 +3,11 @@ akka {
     host = "172.17.0.2"
     port = 9200
   }
+  http {
+    client {
+      parsing {
+        max-content-length = 56988042
+      }
+    }
+  }
 }
