added route for classification

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -3,6 +3,11 @@ akka {
     host = "172.17.0.2"
     port = 9200
   }
+  cleaning {
+    host = "0.0.0.0"
+    port = 4321
+  }
+
   http {
     client {
       parsing {
