--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 akka {
   elasticsearch {
-    host = "172.17.0.2"
+    host = "localhost"
     port = 9200
   }
   cleaning {
@@ -11,7 +11,7 @@ akka {
   http {
     client {
       parsing {
-        max-content-length = 56988042
+        max-content-length = 66988042
       }
     }
   }
